--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
+    "date-fns": "^2.16.1",
     "polka": "next",
     "sirv": "^1.0.0"
   },
