--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "compression": "^1.7.1",
     "date-fns": "^2.16.1",
+    "isomorphic-fetch": "^3.0.0",
     "polka": "next",
     "sirv": "^1.0.0"
   },
@@ -29,6 +30,7 @@
     "@rollup/plugin-url": "^5.0.0",
     "@tsconfig/svelte": "^1.0.10",
     "@types/compression": "^1.7.0",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
     "rollup": "^2.3.4",
